feat(bungee): add war message types and cross-server orchestration skeleton
- Add war.* message types: challenge/accept/create/ready/transfer/end
- WarOrchestrator maintains matchId, participant servers, and battle server name
- Lobby server sends challenge; Battle server executes arena creation + GuildWarService
- Results snapshot synced back to all servers via MySQL
- Protocol draft + skeleton (message enums, empty Orchestrator, docs)